--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "method-override": "^2.3.7",
-    "mongoose": "^4.7.9"
+    "mongoose": "^4.7.9",
+    "morgan": "^1.8.0"
   }
 }
