--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.9",
     "morgan": "^1.8.0"
